section header ok

--- a/index.html
+++ b/index.html
@@ -3,23 +3,79 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
 
 
-<nav>
-    <img src="img/logo-main.svg" alt="logo airbnb">
-    <div>
-        <p>Logements</p>
-        <p>Expérience</p>
+<header>
+   <div class="headertop-main">
+        <img id="logoairbnb" src="img/logo-main.jpg" alt="logo airbnb"/>
+        <div class="headertop-1">
+            <p class="headertop-1content bold">Logements</p>
+            <p class="headertop-1content">Expérience</p>
+        </div>
+        <p class="bold">Mettre mon logement sur airbnb</p>
     </div>
-    <p>Mettre mon logement sur airbnb</p>
-    <form action="get">
-        <input type="text" name="prenom">
-    </form>
-</nav>
+    <div class="headerbot">
+        <button class="btn-left">
+            <p><strong>Destination</strong></p>
+            <p>Rechercher une destination</p>
+        </button>
+        <button class="btn-right">
+           <div>
+               <p><strong>Voyageurs</strong></p>
+               <p>Ajouter des voyageurs</p>
+           </div>
+            
+            <img src="img/minilogo-chercher.png" alt="loupe"/>
+        </button>
+    </div>
+</header>
 <body>
-    
+   <nav>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-campagne.jpg" alt="">
+           <p>Campagne</p>
+        </div>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-iconique.webp" alt="">
+           <p>Iconiques</p>
+        </div>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-jeu.jpg" alt="">
+           <p>Espace de jeu</p>
+        </div>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-mer.jpg" alt="">
+           <p>Bord de mer</p>
+        </div>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-piscine.jpg" alt="">
+           <p>Piscines</p>
+        </div>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-handicap.jpg" alt="">
+           <p>Logements adaptés</p>
+        </div>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-cabane.jpg" alt="">
+           <p>Cabanes</p>
+        </div>
+       <div class="nav-icon-container">
+           <img src="img/minilogo-lac.jpg" alt="">
+           <p>Lacs</p>
+        </div>
+   </nav>
+    <main>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+    </main>
 </body>
 </html>
