commit de fin de journée

--- a/index.html
+++ b/index.html
@@ -67,15 +67,97 @@
            <p>Lacs</p>
         </div>
    </nav>
+   <div class="separateur"></div>
     <main>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
+        <div class="loc-container loc1">
+           <div class="img-container">
+               <img class="img-loc" src="img/loc1.webp" alt="">
+               <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Entraînez-vous au Manoir X</h2>
+                <p>Hôte: Jubilee</p>
+                <p>Réservation close</p>
+            </div>
+        </div>
+        <div class="loc-container loc2">
+            <div class="img-container">
+                <img class="img-loc" src="img/loc2.webp" alt="">
+                <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Explorez la maison Purple Rain de Prince</h2>
+                <p>Hôte: Xendy</p>
+                <p>Sortie prévue en août</p>
+            </div>
+        </div>
+        <div class="loc-container loc3">
+            <div class="img-container">
+                <img class="img-loc" src="img/loc3.webp" alt="">
+                <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Inaugurez les Jeux Olympiques au Musée</h2>
+                <p>Hôte: Mathieu</p>
+                <p>Complet</p>
+            </div>
+        </div>
+        <div class="loc-container loc4">
+            <div class="img-container">
+                <img class="img-loc" src="img/loc4.webp" alt="">
+                <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Creez vo propre uper costume</h2>
+                <p>Hôte : Edna </p>
+                <p>Complet</p>
+            </div>
+        </div>
+        <div class="loc-container loc5">
+            <div class="img-container">
+                <img class="img-loc" src="img/loc5.jpeg" alt="">
+                <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Une nuit dans la maison</h2>
+                <p>Hôte : Carl</p>
+                <p>Réservation close</p>
+            </div>
+        </div>
+        <div class="loc-container loc6">
+            <div class="img-container">
+                <img class="img-loc" src="img/loc6.webp" alt="">
+                <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Découvrez Bollywood</h2>
+                <p>Hôte : Jubilee</p>
+                <p>Complet</p>
+            </div>
+        </div>
+        <div class="loc-container loc7">
+            <div class="img-container">
+                <img class="img-loc" src="img/loc7.webp" alt="">
+                <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Les super vacances</h2>
+                <p>Hôte : Malzahar</p>
+                <p>Complet</p>
+            </div>
+        </div>
+        <div class="loc-container loc8">
+            <div class="img-container">
+                <img class="img-loc" src="img/loc8.webp" alt="">
+                <img class="logo-loc" src="img/minilogo-dl.png" alt="">
+            </div>
+            <div>
+                <h2 class="title-loc">Welcome to the bot lane</h2>
+                <p>Hôte : Zhyra</p>
+                <p>Complet</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
+
