finition nav + main

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </button>
     </div>
 </header>
+
+<div class="separateur"></div>
 <body>
    <nav>
        <div class="nav-icon-container">
@@ -67,7 +69,7 @@
            <p>Lacs</p>
         </div>
    </nav>
-   <div class="separateur"></div>
+   
     <main>
         <div class="loc-container loc1">
            <div class="img-container">
@@ -77,7 +79,7 @@
             <div>
                 <h2 class="title-loc">Entraînez-vous au Manoir X</h2>
                 <p>Hôte: Jubilee</p>
-                <p>Réservation close</p>
+                <p class="statut">Réservation close</p>
             </div>
         </div>
         <div class="loc-container loc2">
@@ -88,7 +90,7 @@
             <div>
                 <h2 class="title-loc">Explorez la maison Purple Rain de Prince</h2>
                 <p>Hôte: Xendy</p>
-                <p>Sortie prévue en août</p>
+                <p class="statut">Sortie prévue en août</p>
             </div>
         </div>
         <div class="loc-container loc3">
@@ -99,7 +101,7 @@
             <div>
                 <h2 class="title-loc">Inaugurez les Jeux Olympiques au Musée</h2>
                 <p>Hôte: Mathieu</p>
-                <p>Complet</p>
+                <p class="statut">Complet</p>
             </div>
         </div>
         <div class="loc-container loc4">
@@ -110,7 +112,7 @@
             <div>
                 <h2 class="title-loc">Creez vo propre uper costume</h2>
                 <p>Hôte : Edna </p>
-                <p>Complet</p>
+                <p class="statut">Complet</p>
             </div>
         </div>
         <div class="loc-container loc5">
@@ -121,7 +123,7 @@
             <div>
                 <h2 class="title-loc">Une nuit dans la maison</h2>
                 <p>Hôte : Carl</p>
-                <p>Réservation close</p>
+                <p class="statut">Réservation close</p>
             </div>
         </div>
         <div class="loc-container loc6">
@@ -132,7 +134,7 @@
             <div>
                 <h2 class="title-loc">Découvrez Bollywood</h2>
                 <p>Hôte : Jubilee</p>
-                <p>Complet</p>
+                <p class="statut">Complet</p>
             </div>
         </div>
         <div class="loc-container loc7">
@@ -143,7 +145,7 @@
             <div>
                 <h2 class="title-loc">Les super vacances</h2>
                 <p>Hôte : Malzahar</p>
-                <p>Complet</p>
+                <p class="statut">Complet</p>
             </div>
         </div>
         <div class="loc-container loc8">
@@ -154,7 +156,7 @@
             <div>
                 <h2 class="title-loc">Welcome to the bot lane</h2>
                 <p>Hôte : Zhyra</p>
-                <p>Complet</p>
+                <p class="statut">Complet</p>
             </div>
         </div>
     </main>
