--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="FR">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Airbnb &#448; Locations de vacances, maisons de plage, cabanes , etc... </title>
 </head>
 
 
@@ -160,6 +160,18 @@
             </div>
         </div>
     </main>
+    <div class="separateur"></div>
+    <footer>
+        <ul>
+            &copy; 2024 Airbnb, Inc.
+            <li>Confidentialité</li>
+            <li>Condition générale</li>
+            <li>Plan du site</li>
+            <li>Fonctionnement du site</li>
+            <li>Infos sur l'entreprise</li>
+        </ul>
+        <strong>&euro; EUR</strong>
+    </footer>
 </body>
 </html>
 
