html verificator + ajustement

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Airbnb &#448; Locations de vacances, maisons de plage, cabanes , etc... </title>
 </head>
-
+<body>
 
 <header>
    <div class="headertop-main">
-        <img id="logoairbnb" src="img/logo-main.jpg" alt="logo airbnb"/>
+        <img id="logoairbnb" src="img/logo-main.jpg" alt="logo airbnb">
         <div class="headertop-1">
             <p class="headertop-1content bold">Logements</p>
             <p class="headertop-1content">Expérience</p>
@@ -18,23 +18,23 @@
         <p class="bold">Mettre mon logement sur airbnb</p>
     </div>
     <div class="headerbot">
-        <button class="btn-left">
-            <p><strong>Destination</strong></p>
-            <p>Rechercher une destination</p>
-        </button>
-        <button class="btn-right">
+        <div class="btn-left">
+            <strong>Destination</strong><br>
+            Rechercher une destination
+        </div>
+        <div class="btn-right">
            <div>
-               <p><strong>Voyageurs</strong></p>
-               <p>Ajouter des voyageurs</p>
+               <strong>Voyageurs</strong><br>
+               Ajouter des voyageurs
            </div>
             
-            <img src="img/minilogo-chercher.png" alt="loupe"/>
-        </button>
+            <img src="img/minilogo-chercher.png" alt="loupe">
+        </div>
     </div>
 </header>
 
 <div class="separateur"></div>
-<body>
+
    <nav>
        <div class="nav-icon-container">
            <img src="img/minilogo-campagne.jpg" alt="">
@@ -161,9 +161,10 @@
         </div>
     </main>
     <div class="separateur"></div>
+
     <footer>
         <ul>
-            &copy; 2024 Airbnb, Inc.
+            <li class="clean">&copy; 2024 Airbnb, Inc.</li>
             <li>Confidentialité</li>
             <li>Condition générale</li>
             <li>Plan du site</li>
